track_4/esercizi_hard/security-policies.yaml
#Policy FRONTEND
# - Out: verso Backend
# - In: nega tutto tranne esterno 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
 
  ingress: 
  - {} 
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

---
#Policy BACKEND
# - Out: verso Database
# - In: solo da Frontend
# - Resto: negato 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: database
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

---
#Policy DATABASE
# - nega TUTTO (In e Out). 

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-policy
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress    #solo traffico in entrata
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: backend
      ports:
      - protocol: TCP
        port: 6379
